<resources>
    <string name="AM">morning</string>
    <string name="PM">afternoon</string>
    <string name="abandon">Abandon</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_and_security">Account and Security</string>
    <string name="account_login">Account login</string>
    <string name="account_security">Account security</string>
    <string name="ace_name">Acehnese</string>
    <string name="add">Add</string>
    <string name="add_add_device">Add Device</string>
    <string name="add_device_dialog_tip">Please connect the device first</string>
    <string name="add_device_dialog_tip2">Please connect the device to unlock the translation function</string>
    <string name="add_device_dialog_title_tip">Attention</string>
    <string name="adjust">Adjust</string>
    <string name="af_name">Afrikaans</string>
    <string name="ai_btn_chines">Mandarin</string>
    <string name="ai_btn_english">English</string>
    <string name="ai_chat_empty">Dear friend, it\'s great to meet you! Let me talk to you about what you have learned recently and what interesting things you have encountered! Strive to become your best friend.</string>
    <string name="ai_chat_method">1. After turning on the device, open the app and complete Bluetooth pairing and connection as prompted on the interface;\n2. After successful connection, you can directly wake up the AI assistant through preset voice commands for voice conversations and function operations.</string>
    <string name="ai_chat_text">AI Chat Guide</string>
    <string name="ai_chat_title">AI chat</string>
    <string name="ai_default_es_mx">México</string>
    <string name="ai_default_in">Indonesian</string>
    <string name="ai_default_mn">Монгол хэл</string>
    <string name="ai_default_ms">Malaysia</string>
    <string name="ai_default_ms_sg">Singapura</string>
    <string name="ai_default_tl">Pilipinas</string>
    <string name="ai_default_vi">tiếng Việt</string>
    <string name="ai_in">Indonesia</string>
    <string name="ai_mode">AI chat mode</string>
    <string name="ai_mode_tip">AI chat mode</string>
    <string name="ai_tarns_empty">One person clicks on the earphones,one person clicks on the phone to start the conversation</string>
    <string name="ai_tarns_freely_empty">Click the button to start the conversation</string>
    <string name="ai_tarns_glasses_empty">One person clicks on the glasses,one person clicks on the phone to start the conversation</string>
    <string name="ai_tarns_phone_empty">Tap the button on the phone to start the conversation.</string>
    <string name="ai_tarns_two_ear_empty">One person clicks on the left earphone, and the other person clicks on the right earphone to start the conversation</string>
    <string name="ai_title">AI Dialog</string>
    <string name="ai_trans_ar">Arabic</string>
    <string name="ai_trans_de">German</string>
    <string name="ai_trans_default_ar">اَلْعَرَبِيَّةُ</string>
    <string name="ai_trans_default_de">Deutsch</string>
    <string name="ai_trans_default_es">Español</string>
    <string name="ai_trans_default_fr">Français</string>
    <string name="ai_trans_default_hi">हिंदी</string>
    <string name="ai_trans_default_it">Italiano</string>
    <string name="ai_trans_default_ja">日本語</string>
    <string name="ai_trans_default_kr">한국어</string>
    <string name="ai_trans_default_pt">Português</string>
    <string name="ai_trans_default_ru">Русский</string>
    <string name="ai_trans_default_ti">ภาษาไทย</string>
    <string name="ai_trans_en">English</string>
    <string name="ai_trans_es">Spanish</string>
    <string name="ai_trans_es_mx">Mexico</string>
    <string name="ai_trans_fr">French</string>
    <string name="ai_trans_hi">Hindi</string>
    <string name="ai_trans_it">Italian</string>
    <string name="ai_trans_ja">Japanese</string>
    <string name="ai_trans_kr">Korean</string>
    <string name="ai_trans_ms">Malaysia</string>
    <string name="ai_trans_ms_sg">Singapore</string>
    <string name="ai_trans_pt">Portuguese</string>
    <string name="ai_trans_ru">Russian</string>
    <string name="ai_trans_ti">Thai</string>
    <string name="ai_trans_title">AI translate</string>
    <string name="ai_trans_tl">Philippines</string>
    <string name="ai_trans_zh">Chinese</string>
    <string name="ai_vi">Vietnamese</string>
    <string name="ai_voice_note_cancel">Cancel</string>
    <string name="ai_voice_note_choose_app_to_share">Share via</string>
    <string name="ai_voice_note_confirm">Confirm</string>
    <string name="ai_voice_note_del_voice_note_confirm">Delete permanently?</string>
    <string name="ai_voice_note_not_prompting_anymore">Don\'t ask again</string>
    <string name="ai_voice_note_permission">Permissions</string>
    <string name="ai_voice_note_permission_allow">Allow</string>
    <string name="ai_voice_note_permission_refuse">Deny</string>
    <string name="ai_voice_note_permission_tip">App needs permissions</string>
    <string name="ai_voice_note_permission_tip1">Permission guide</string>
    <string name="ai_voice_note_permission_tip2">Record audio</string>
    <string name="ai_voice_note_permission_tip3">Modify audio settings</string>
    <string name="ai_voice_note_permission_tip4">Keep awake</string>
    <string name="ai_voice_note_permission_tip5">Permission denied</string>
    <string name="ai_voice_note_please_input_record_title">Enter title</string>
    <string name="ai_voice_note_record_abort">Discard</string>
    <string name="ai_voice_note_record_audio_format_tips">Converting audio, please wait…</string>
    <string name="ai_voice_note_record_edit_title">Edit title</string>
    <string name="ai_voice_note_record_exit_tip">Exit while recording?</string>
    <string name="ai_voice_note_record_list_title">Recordings</string>
    <string name="ai_voice_note_record_record_detail">Details</string>
    <string name="ai_voice_note_record_record_start_tip">Tap to start</string>
    <string name="ai_voice_note_record_save_and_exit">Save And exit</string>
    <string name="ai_voice_note_record_set_edit_title">Title (optional)</string>
    <string name="ai_voice_note_record_tip_ok">OK</string>
    <string name="ai_voice_note_record_tip_on_exit">Recording stopped. Save?</string>
    <string name="ai_voice_note_record_tip_on_save">Recording paused. Save?</string>
    <string name="ai_voice_note_record_tip_over_three_hours">Max 3 hours. Auto-saved.</string>
    <string name="ai_voice_note_record_tip_record_more">Record again</string>
    <string name="ai_voice_note_record_title_maxlength">Max 50 chars</string>
    <string name="ai_voice_note_rename">Rename</string>
    <string name="ai_voice_note_share_documemt">Share</string>
    <string name="ai_voice_note_start_tip">Start recording…</string>
    <string name="ai_voice_note_string_notify_permission">Allow notifications</string>
    <string name="ai_voice_note_string_record">Record</string>
    <string name="ai_voice_note_string_save">Save</string>
    <string name="ai_voice_note_string_voicenotes_change">Language convert</string>
    <string name="ai_voice_note_tip_converting">Loading…</string>
    <string name="ai_voice_note_tip_pause_record">Pause</string>
    <string name="ai_voice_note_tip_start_record">Start</string>
    <string name="ai_voice_note_title_record_page">File Recording</string>
    <string name="ai_voice_note_to_setting">Settings</string>
    <string name="ai_voice_note_view_tip">No recordings</string>
    <string name="ai_yueyu">yue</string>
    <string name="album_synchronization">Album synchronization</string>
    <string name="allow">Allow</string>
    <string name="allow_backend_operation">Allow backend operation</string>
    <string name="already_binding">Already Bound</string>
    <string name="already_deep_think">Already deeply thought</string>
    <string name="already_set">Already set</string>
    <string name="am_name">Amharic</string>
    <string name="battery_optimization">Battery optimization</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="eyevue_loading_no_data_view_text_hint">No data!</string>
    <string name="eyevue_loading_no_net_view_again">Again</string>
    <string name="eyevue_loading_no_net_view_text_hint">Network exception, please try again!</string>
    <string name="eyevue_loading_view_text_hint">Loading…</string>
    <string name="record_save_and_exit">Exit and save</string>
    <string name="rename">Rename</string>
    <string name="share_audio">Audiodatei teilen</string>
    <string name="share_txt">Share text document</string>
    <string name="string_background_permission_tip">Select your phone model and follow the guide to enable background whitelist</string>
    <string name="string_delete">Delete</string>
    <string name="string_huawei">Huawei/Honor</string>
    <string name="string_is_jump_guide">Are you sure you want to skip the basic operation guide?</string>
    <string name="string_is_jump_guide_tip">You can restart the guide at any time in Mobile App - Home - Glasses Basic Operations.</string>
    <string name="string_oppo_realme_oneplus">OPPO/Realme/OnePlus</string>
    <string name="string_samsung">Samsung</string>
    <string name="string_vivo_iqoo">VIVO/IQOO</string>
    <string name="string_xiaomi">xiaomi</string>
    <string name="tip_allow_backend_operation">Ensure that the application can still run actively after being returned to the background.</string>
    <string name="tip_background_permission_settings">To avoid interruptions in the operation of applications by the mobile system, which may affect the use of Bluetooth shared networks, message notifications, and other functions, please complete the following settings:</string>
    <string name="tip_battery_optimization">Prevent the system from interrupting the operation of applications to save power.</string>
    <string name="tips">Tips</string>
    <string name="to_setting">Go to Settings</string>
    <string name="view_tutorial">View tutorial</string>
    <string name="voice_dialog_edit">Edit</string>
    <string name="voice_dialog_record">Do you want to end the recording?</string>
</resources>