<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/tab_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.eyevue.common.widget.toolbar.ToolBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="@dimen/sp_12"
            android:textColor="@color/text_important_color_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_background_permission_settings"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginVertical="@dimen/dp_16"/>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/ll_battery_optimization"
            android:background="@drawable/bg_btn_main"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_62"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:paddingHorizontal="@dimen/dp_20">
            <TextView
                android:textSize="@dimen/set_me_function_text_size"
                android:textColor="@color/color_main_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/battery_optimization"
                android:layout_weight="1"/>
            <TextView
                android:textSize="@dimen/sp_12"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/tv_battery_optimization"
                android:background="@drawable/bg_btn_set_nol"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_28"
                android:minWidth="@dimen/dp_70"
                android:text="@string/to_setting"
                android:paddingHorizontal="@dimen/dp_16"/>
        </LinearLayout>
        <TextView
            android:textSize="@dimen/sp_12"
            android:textColor="@color/text_important_color_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_battery_optimization"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginVertical="@dimen/dp_16"/>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/ll_allow_backend_operation"
            android:background="@drawable/bg_btn_main"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_62"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:paddingHorizontal="@dimen/dp_20">
            <TextView
                android:textSize="@dimen/set_me_function_text_size"
                android:textColor="@color/color_main_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/allow_backend_operation"
                android:layout_weight="1"/>
            <TextView
                android:textSize="@dimen/sp_12"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/tv_allow_backend_operation"
                android:background="@drawable/bg_btn_set_nol"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_28"
                android:minWidth="@dimen/dp_70"
                android:text="@string/view_tutorial"
                android:paddingHorizontal="@dimen/dp_16"/>
        </LinearLayout>
        <TextView
            android:textSize="@dimen/sp_12"
            android:textColor="@color/text_important_color_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_allow_backend_operation"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginVertical="@dimen/dp_16"/>
    </LinearLayout>
</FrameLayout>
