<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/tab_bg"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.eyevue.common.widget.toolbar.ToolBar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="@dimen/sp_12"
        android:textColor="@color/text_important_color_new"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/string_background_permission_tip"
        android:layout_marginHorizontal="@dimen/dp_20"/>
    <TextView
        android:textSize="@dimen/set_me_function_text_size"
        android:textColor="@color/tv_me_function"
        android:gravity="center_vertical"
        android:id="@+id/tv_huawei"
        android:background="@drawable/bg_btn_main"
        android:padding="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_62"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/string_huawei"
        android:drawablePadding="@dimen/dp_10"
        android:layout_marginHorizontal="@dimen/dp_16"
        app:drawableEndCompat="@drawable/ic_bv_more"/>
    <TextView
        android:textSize="@dimen/set_me_function_text_size"
        android:textColor="@color/tv_me_function"
        android:gravity="center_vertical"
        android:id="@+id/tv_oppo"
        android:background="@drawable/bg_btn_main"
        android:padding="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_62"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/string_oppo_realme_oneplus"
        android:drawablePadding="@dimen/dp_10"
        android:layout_marginHorizontal="@dimen/dp_16"
        app:drawableEndCompat="@drawable/ic_bv_more"/>
    <TextView
        android:textSize="@dimen/set_me_function_text_size"
        android:textColor="@color/tv_me_function"
        android:gravity="center_vertical"
        android:id="@+id/tv_vivo"
        android:background="@drawable/bg_btn_main"
        android:padding="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_62"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/string_vivo_iqoo"
        android:drawablePadding="@dimen/dp_10"
        android:layout_marginHorizontal="@dimen/dp_16"
        app:drawableEndCompat="@drawable/ic_bv_more"/>
    <TextView
        android:textSize="@dimen/set_me_function_text_size"
        android:textColor="@color/tv_me_function"
        android:gravity="center_vertical"
        android:id="@+id/tv_samsung"
        android:background="@drawable/bg_btn_main"
        android:padding="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_62"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/string_samsung"
        android:drawablePadding="@dimen/dp_10"
        android:layout_marginHorizontal="@dimen/dp_16"
        app:drawableEndCompat="@drawable/ic_bv_more"/>
    <TextView
        android:textSize="@dimen/set_me_function_text_size"
        android:textColor="@color/tv_me_function"
        android:gravity="center_vertical"
        android:id="@+id/tv_xiaomi"
        android:background="@drawable/bg_btn_main"
        android:padding="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_62"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/string_xiaomi"
        android:drawablePadding="@dimen/dp_10"
        android:layout_marginHorizontal="@dimen/dp_16"
        app:drawableEndCompat="@drawable/ic_bv_more"/>
</LinearLayout>
