<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/progressbar_loading"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:indeterminateBehavior="repeat"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/base_purple"
        android:indeterminateTintMode="src_atop"/>
    <TextView
        android:textSize="@dimen/dp_11"
        android:textColor="@color/base_purple"
        android:id="@+id/tv_loading_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/eyevue_loading_view_text_hint"
        android:layout_below="@+id/progressbar_loading"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:textSize="@dimen/dp_14"
        android:textColor="@color/color_body"
        android:id="@+id/tv_no_data_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/eyevue_loading_no_data_view_text_hint"
        android:layout_centerInParent="true"/>
    <TextView
        android:textSize="@dimen/dp_14"
        android:textColor="@color/color_body"
        android:id="@+id/tv_no_net_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_18"
        android:text="@string/eyevue_loading_no_net_view_text_hint"
        android:layout_centerInParent="true"/>
    <TextView
        android:textSize="@dimen/dp_12"
        android:textColor="@color/color_body"
        android:gravity="center"
        android:id="@+id/tv_again"
        android:background="@drawable/shape_button_again"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minWidth="58dp"
        android:minHeight="30dp"
        android:text="@string/eyevue_loading_no_net_view_again"
        android:layout_below="@+id/tv_no_net_hint"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
