<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:background="@drawable/shape_share_record_dialog_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_34">
    <ImageView
        android:id="@+id/iv_bar"
        android:layout_width="43dp"
        android:layout_height="4dp"
        android:layout_marginTop="@dimen/dp_12"
        android:src="@drawable/ic_timing_dialog_top_bar"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="16sp"
        android:textColor="#000000"
        android:gravity="center"
        android:id="@+id/tv_share_text"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/share_txt"
        android:drawablePadding="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"/>
    <View
        android:background="#eeeeee"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    <TextView
        android:textSize="16sp"
        android:textColor="#000000"
        android:gravity="center"
        android:id="@+id/tv_share_audio"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/share_audio"
        android:drawablePadding="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"/>
    <View
        android:background="#eeeeee"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    <TextView
        android:textSize="16sp"
        android:textColor="#000000"
        android:gravity="center"
        android:id="@+id/tv_rename"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/rename"
        android:drawablePadding="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"/>
    <View
        android:background="#eeeeee"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    <TextView
        android:textSize="16sp"
        android:textColor="#ff0000"
        android:gravity="center"
        android:id="@+id/tv_delete"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/string_delete"
        android:drawablePadding="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"/>
    <View
        android:background="#f5f5f5"
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
    <TextView
        android:textSize="16sp"
        android:textColor="#000000"
        android:gravity="center"
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/cancel"/>
</LinearLayout>
