<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/bg_dialog_main"
        android:layout_width="@dimen/dp_279"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/sp_16"
            android:textColor="@color/base_blue"
            android:gravity="center"
            android:id="@+id/tv_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:text="@string/voice_dialog_edit"/>
        <View
            android:background="@color/color_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="@dimen/dp_20"/>
        <TextView
            android:textSize="@dimen/sp_16"
            android:textColor="#f64d44"
            android:gravity="center"
            android:id="@+id/tv_delete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:text="@string/string_delete"/>
        <View
            android:background="@color/color_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="@dimen/dp_20"/>
        <TextView
            android:textSize="@dimen/sp_16"
            android:textColor="@color/text_important_color_new"
            android:gravity="center"
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:text="@string/cancel"/>
    </LinearLayout>
</FrameLayout>
