<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_40"
    android:layout_marginEnd="@dimen/dp_40">
    <TextView
        android:textSize="@dimen/sp_18"
        android:textColor="@color/color_main_text"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/string_is_jump_guide"
        android:layout_marginHorizontal="@dimen/dp_24"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginHorizontal="@dimen/dp_24">
        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@color/text_important_color_new"
            android:layout_gravity="center_vertical"
            android:id="@+id/tv_tip_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_is_jump_guide_tip"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_24"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginVertical="@dimen/dp_24">
        <Button
            android:textSize="@dimen/sp_14"
            android:textStyle="normal"
            android:textColor="@color/text_important_color_new"
            android:gravity="center"
            android:id="@+id/btn_disagree"
            android:background="@drawable/btn_base_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dp_40"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/dp_13"/>
        <Button
            android:textSize="@dimen/sp_14"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/btn_agree"
            android:background="@drawable/bg_btn_main_base_purple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dp_40"
            android:text="@string/confirm"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/dp_19"
            android:paddingHorizontal="@dimen/dp_13"/>
    </LinearLayout>
</LinearLayout>
