<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/transparent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/bg_dialog_main"
        android:layout_width="@dimen/dp_279"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/sp_16"
            android:textColor="@color/text_important_color"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/dp_28"
            android:paddingRight="@dimen/dp_28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_22"
            android:text="@string/tips"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/text_important_color"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="52dp"
            android:text="@string/voice_dialog_record"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"/>
        <View
            android:background="@color/dialog_line"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"/>
        <LinearLayout
            android:gravity="bottom|center_horizontal"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:id="@+id/dialog_text_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:textSize="@dimen/sp_14"
                android:textColor="@color/gray_828282"
                android:gravity="center"
                android:id="@+id/tv_cancel"
                android:padding="12dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:layout_weight="1"/>
            <View
                android:id="@+id/dialog_clear_text_vertical_divide"
                android:background="@color/dialog_line"
                android:layout_width="0.2dp"
                android:layout_height="match_parent"/>
            <TextView
                android:textSize="@dimen/sp_14"
                android:textColor="?attr/imgbg"
                android:gravity="center"
                android:id="@+id/tv_sure"
                android:padding="12dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/record_save_and_exit"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
